# cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark_sample.cpp
example/: CMakeLists.txt  main.cpp
include/log/: log.h
src/: CMakeLists.txt
test/: CMakeLists.txt  test.cpp
